highlight topic on selection; wrapper overflow; fixed list element deletion

--- a/client/main.css
+++ b/client/main.css
@@ -7,6 +7,7 @@ html, body {
 	height: 100%;
 	width: 100%;
 	background-color: #83E1CC;
+	overflow: auto;
 }
 
 
@@ -59,6 +60,7 @@ html, body {
 	background-color: #48A28E;
 	width: 20%;
 	height: 100%;
+	overflow: auto;
 }
 
 .menu-buttons {
@@ -170,14 +172,14 @@ html, body {
     display: inline-block;
     vertical-align: top;
     width: 75%;
-
+    height: 100%;
 }
 
 .content {
 	padding-left: 40px;
 	padding-top: 20px;
 	width: 100%;
-
+	height: 100%;
 }
 
 .one-topic {
@@ -210,6 +212,7 @@ html, body {
 .js-list-element-content {
 	width: 100%;
 	background-color: #CFFCF2;
+	resize: none;
 }
 .content-element-change:focus {
 	outline: none !important;
